<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_200"
        android:fitsSystemWindows="true"
        tools:context=".ui.home.HomeActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgTop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/txRegister"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_travel" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="@id/txRegister"
            app:layout_constraintEnd_toEndOf="@id/btnRegister"
            app:layout_constraintTop_toTopOf="@id/txRegister"
            app:srcCompat="@drawable/ic_round_settings_24" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txRegister"
            style="@style/Text.Header40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:layout_constraintBottom_toTopOf="@id/txSubTitle"
            app:layout_constraintStart_toStartOf="@id/txHave" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txSubTitle"
            style="@style/Text.Content3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/simple_register_youre_ready"
            app:layout_constraintBottom_toTopOf="@id/ed_register_name"
            app:layout_constraintStart_toStartOf="@id/txHave" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_register_name"
            style="@style/EditText.Background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10sp"
            android:drawableStart="@drawable/ic_round_person_24"
            android:drawablePadding="10dp"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@id/ed_register_email" />

        <ahmadkabi.stories.widget.EmailEditText
            android:id="@+id/ed_register_email"
            style="@style/EditText.Background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10sp"
            android:drawableStart="@drawable/ic_round_alternate_email_24"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@id/ed_register_password" />


        <ahmadkabi.stories.widget.PasswordEditText
            android:id="@+id/ed_register_password"
            style="@style/EditText.Background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="30dp"
            android:drawableStart="@drawable/ic_round_lock_24"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@id/txHave" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txHave"
            style="@style/Text.Content3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="30dp"
            android:text="@string/have_an_account_login"
            app:layout_constraintBottom_toTopOf="@id/btnRegister"
            app:layout_constraintStart_toStartOf="@id/btnRegister" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            style="@style/MaterialButton.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
