<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.home.HomeActivity">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_round_arrow_back_24" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text.Content5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/story_detail"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/imgBack"
                app:layout_constraintStart_toEndOf="@id/imgBack"
                app:layout_constraintTop_toTopOf="@id/imgBack" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_detail_photo"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:transitionName="photo"
                android:contentDescription="@string/image_preview"
                app:layout_constraintTop_toBottomOf="@id/imgBack"
                app:srcCompat="@drawable/ic_lamp" />

            <LinearLayout
                android:id="@+id/llUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_username"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/dp_6"
                android:paddingStart="@dimen/dp_6"
                android:paddingEnd="16dp"
                android:transitionName="user"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_detail_photo">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txAvatar"
                    style="@style/Text.Header3"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:background="@drawable/bg_circle_primary_overlay50"
                    android:gravity="center"
                    android:text="@string/u" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_detail_name"
                    style="@style/Text.Content2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    tools:text="@string/username" />

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_detail_description"
                style="@style/Text.Content3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColor="@color/grey_700"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llUser"
                tools:text="@string/lorem_3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
